--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -16,10 +16,53 @@
 @import "bootstrap/forms";
 @import "bootstrap/buttons";
 
+// Components
+@import "bootstrap/navbar";
+
 html {
   height: 100%;
 }
 
 .ember-application {
+  height: 100%;
 
+  // This is the application view
+  & > .ember-view {
+    height: 100%;
+
+    // This is the top level outlet
+    & > .liquid-container {
+      height: 100%;
+
+      & > .liquid-child {
+        height: 100%;
+      }
+    }
+  }
+}
+
+.bottom-nav {
+  bottom: 0;
+  margin-bottom: 0;
+  position: absolute;
+  width: 100%;
+}
+
+.liquid-container {
+  /*background-color: rgba(100, 100, 100, 0.05);*/
+}
+
+.liquid-child {
+  /*background-color: rgba(255, 0, 0, 0.05);*/
+}
+
+.login-view {
+  display: flex;
+  height: 100%;
+}
+
+.login-form {
+  height: 200px;
+  margin: auto;
+  width: 200px;
 }
